crates/jarl/tests/integration/snapshots/integration__comments__jarl_ignore_start_end_mismatched_rules.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: unmatched_range_suppression
 --> test.R:2:1
  |
2 | # jarl-ignore-start any_is_na: reason
  | ------------------------------------- This `jarl-ignore-start` has no matching `jarl-ignore-end` at the same nesting level.
  |
  = help: Add a matching `jarl-ignore-end` comment at the same nesting level.

warning: any_is_na
 --> test.R:3:1
  |
3 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

warning: unmatched_range_suppression
 --> test.R:4:1
  |
4 | # jarl-ignore-end browser
  | ------------------------- This `jarl-ignore-end` has no matching `jarl-ignore-start` at the same nesting level.
  |
  = help: Add a matching `jarl-ignore-start` comment at the same nesting level.

warning: any_is_na
 --> test.R:5:1
  |
5 | any(is.na(y))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

Found 4 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
