crates/jarl/tests/integration/snapshots/integration__comments__jarl_ignore_wrong_rule.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: outdated_suppression
 --> test.R:2:1
  |
2 | # jarl-ignore any_duplicated: wrong rule for this violation
  | ----------------------------------------------------------- This suppression comment is unused, no violation would be reported without it.
  |
  = help: Remove this suppression comment or verify that it's still needed.

warning: any_is_na
 --> test.R:3:1
  |
3 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

Found 2 errors.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
