crates/jarl/tests/integration/snapshots/integration__comments__nolint_format_not_recognized.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.R:3:1
  |
3 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

warning: any_is_na
 --> test.R:5:1
  |
5 | any(is.na(y))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

warning: any_is_na
 --> test.R:7:1
  |
7 | any(is.na(z))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

Found 3 errors.
3 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
