crates/jarl/tests/integration/snapshots/integration__comments__nolint_start_end_with_specific_rules.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_duplicated
 --> test.R:4:1
  |
4 | any(duplicated(x))
  | ------------------ `any(duplicated(...))` is inefficient.
  |
  = help: Use `anyDuplicated(...) > 0` instead.

warning: any_duplicated
  --> test.R:10:1
   |
10 | any(duplicated(x))
   | ------------------ `any(duplicated(...))` is inefficient.
   |
   = help: Use `anyDuplicated(...) > 0` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
